# quant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  SWEEP_FINDINGS.md  Sweep of other pairs.txt  pyproject.toml  requirements.txt  walkthrough.md
.gitnexus/: config.json  meta.json
docs/: ARCHITECTURE.md  DEBUGGING.md  GLOSSARY.md  LIVE_DEPLOY.md  RAILWAY.md  RAILWAY_RUNBOOK.md  event_schema_v1.md  state_space_transitions.md
notebooks/: session note 22.2.
scripts/: analyze_windows_features.py  backtest_multi_asset.py  build_daily_features.py  build_daily_gate_solusdt.py  build_density_images.py  build_gate_freeze.py  build_gate_walkforward.py  build_renko_fixed.py  check_parquet_anomalies.py  check_ts_integrity.py  clean_parquet_outliers.py  contrast_positive_windows.py  debug_dashboard_sources.py  eval_holdout_slice.py  imba_opposite_exit_backtest.py  import_solusdc_csv_gz.py  ingest_ohlcv_file.py  ingest_pipe_ohlcv.py  kelly_from_trades.py  leverage_sweep.py  make_gate_variants.py  make_pc_3axis_gate_v2.py  make_signals_imba.py  make_signals_imba_renko.py  mark_and_analyze_windows.py  monte_carlo_trades.py  pc_calibration_report.py  plot_equity_gate_price.py  plot_equity_price_vol.py  plot_last5_trades.py  plot_merged_equity_solusdt.py  plot_monte_carlo.py  plot_price_regime_equity_trades.py  plot_regime_diagnostics.py  plot_state_space_v01.py  plot_trades_window.py  print_regime_values_since.py  print_regime_window_stats.py  railway_entrypoint.sh  regime_window.py  (+18 more)
tests/: test_build_density_images.py  test_dashboard_state.py  (+14 more)
(+165 files in other folders)
