[project]
name = "quant"
version = "0.1.0"
description = "Crypto futures quant research + execution stack"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=12.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "rich>=13.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
quant-backtest = "quant.backtest.renko_runner:main"
quant-webhook = "quant.execution.webhook_server:main"
quant-manual-order = "quant.execution.manual_orders:main"
